--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
 
             <div class="link-hücresi">
-             <a href="/index2.html">
+             <a href="Portfollio-Website/index2.html">
             <i class="fa-solid fa-diagram-project"></i>
               <span>Projects</span>
             </a>
@@ -197,3 +197,4 @@
 
   </body>
 </html>
+
