--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <br>
         <br>
       <img src="İmages/favicon.png" alt="logo">
-        <a href="/İndex.html">
+        <a href="index.html">
             
           King Charlotte</a>
           
@@ -197,4 +197,5 @@
 
   </body>
 </html>
+
 
