--- a/index.html
+++ b/index.html
@@ -101,14 +101,14 @@
             </div>
 
             <div class="link-hücresi">
-             <a href="Portfollio-Website/index2.html">
+             <a href="index2.html">
             <i class="fa-solid fa-diagram-project"></i>
               <span>Projects</span>
             </a>
             </div> 
 
             <div class="link-hücresi">
-            <a href="/İndex3.html">
+            <a href="index3.html">
               <i class="fa-solid fa-envelope"></i>
               <span>Contact</span>
             </a>
@@ -197,5 +197,6 @@
 
   </body>
 </html>
+
 
 
