--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
 
           <div class="ana-resim">
-            <img src="/İmages/Portfollio-profil-resmi.webp" alt="profil">
+            <img src="İmages/Portfollio-profil-resmi.webp" alt="profil">
           </div>
       </section>
 
@@ -197,6 +197,7 @@
 
   </body>
 </html>
+
 
 
 
