--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <title>KingCharlotte - Game Devoloper - Portfolio</title>
 
-    <link rel="icon" type="İmages/png" sizes="32x32" href="/İmages/favicon.png">
+    <link rel="icon" type="İmages/png" sizes="32x32" href="İmages/favicon.png">
 
 <script type="text/javascript" src="lightmode.js" defer></script>
 
@@ -197,6 +197,7 @@
 
   </body>
 </html>
+
 
 
 
