--- a/index2.html
+++ b/index2.html
@@ -27,7 +27,7 @@
 
     <title>KingCharlotte - Game Devoloper - Portfolio</title>
 
-    <link rel="icon" type="İmages/png" sizes="32x32" href="/İmages/favicon.png">
+    <link rel="icon" type="İmages/png" sizes="32x32" href="İmages/favicon.png">
 
     <script type="text/javascript" src="lightmode.js" defer></script>
     
@@ -38,7 +38,7 @@
       <div class="left">
         <br>
         <br>
-        <a href="/İndex.html">
+        <a href="index.html">
             <img src="İmages/favicon.png" alt="logo">
           King Charlotte</a>
       </div>
@@ -111,7 +111,7 @@
 <br>
 <br>
 
-<h2> Come Soon</h2>
+<h2> Coming Soon</h2>
 
 <br
 <br>
@@ -135,7 +135,7 @@
 <br>
 <br>
 
-<h2> Come Soon</h2>
+<h2> Coming Soon</h2>
 
 <br
 <br>
@@ -154,16 +154,16 @@
         </div>
 
         <div class="içerik">
-          <img src="/Fan-Arts/vacdeneme(büyük).png" alt="Image" class="image">
-           <img src="/Fan-Arts/vacmini(büyük).png" alt="Image" class="image">
-            <img src="/Fan-Arts/vacmini.gif" alt="Image" class="image">
-             <img src="/Fan-Arts/PEAKvac.v3.png" alt="Image" class="image">
+          <img src="Fan-Arts/vacdeneme(büyük).png" alt="Image" class="image">
+           <img src="Fan-Arts/vacmini(büyük).png" alt="Image" class="image">
+            <img src="Fan-Arts/vacmini.gif" alt="Image" class="image">
+             <img src="Fan-Arts/PEAKvac.v3.png" alt="Image" class="image">
         </div>
 
         
         <div class="popup">
 <span>&times;</span>
-<img src="/Fan-Arts/PEAKvac.v3.png" alt="">
+<img src="Fan-Arts/PEAKvac.v3.png" alt="">
         </div>
 
 <script>
@@ -188,4 +188,5 @@ document.querySelector(".popup span").onclick = () => {
 </div>
 
   </body>
+
 </html>
