--- a/index3.html
+++ b/index3.html
@@ -27,7 +27,7 @@
 
     <title>KingCharlotte - Game Devoloper - Portfolio</title>
 
-    <link rel="icon" type="İmages/png" sizes="32x32" href="/İmages/favicon.png">
+    <link rel="icon" type="İmages/png" sizes="32x32" href="İmages/favicon.png">
 
     <script type="text/javascript" src="lightmode.js" defer></script>
     
@@ -38,7 +38,7 @@
       <div class="left">
         <br>
         <br>
-        <a href="/İndex.html">
+        <a href="index.html">
             <img src="İmages/favicon.png" alt="logo">
           King Charlotte</a>
       </div>
@@ -103,3 +103,4 @@
 
   </body>
 </html>
+
