--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
       <!-- Section:"1"-"Giriş"-->
       <section class="Giriş">
         <div class="text">
-          <h2>Hi, Im KingCharlotte
+          <h2>Hi, I'm KingCharlotte
             <i class="fa-solid fa-web-awesome"></i>
           </h2>
-          <p>Im a computer science student that working to become a software engineer, but when night comes im a person that likes to write storys and build my own world and because i love video games as they shape my life im inspared to share my storys with the games i make with fun to play gameplays with good storys, but a storys greatness change through readers perspectif so i hope atleast you like the gameplays of my games!
+          <p>I’m a computer science student that’s working to become a software engineer, but when the night comes im just a person that likes to write stories and build my own worlds and because i love video games as they shape my life I'm inspired to share my stories via the games i make with fun to play gameplays and good storys, but a story’s greatness change through readers perspective so i hope atleast you like the gameplay of my games!
           </p>
 
          <br>
@@ -197,6 +197,7 @@
 
   </body>
 </html>
+
 
 
 
