--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <i class="fa-brands fa-github"></i>
         <span>Github</span>
 
-         <a class="hover" href="http://linkedin.com" target="_blank" rel="noopener noreferrer">
+         <a class="hover" href="https://www.linkedin.com/in/muratsalih-erduman-85831b367" target="_blank" rel="noopener noreferrer">
         <i class="fa-brands fa-linkedin"></i>
         <span>Linkedin</span>
 
@@ -101,14 +101,14 @@
             </div>
 
             <div class="link-hücresi">
-             <a href="index2.html">
+             <a href="Projects">
             <i class="fa-solid fa-diagram-project"></i>
               <span>Projects</span>
             </a>
             </div> 
 
             <div class="link-hücresi">
-            <a href="index3.html">
+            <a href="Contact">
               <i class="fa-solid fa-envelope"></i>
               <span>Contact</span>
             </a>
@@ -197,6 +197,7 @@
 
   </body>
 </html>
+
 
 
 
