--- a/Projects.html
+++ b/Projects.html
@@ -38,7 +38,7 @@
       <div class="left">
         <br>
         <br>
-        <a href="index.html">
+        <a href="index">
             <img src="İmages/favicon.png" alt="logo">
           King Charlotte</a>
       </div>
@@ -190,3 +190,4 @@ document.querySelector(".popup span").onclick = () => {
   </body>
 
 </html>
+
