--- a/Contact.html
+++ b/Contact.html
@@ -38,7 +38,7 @@
       <div class="left">
         <br>
         <br>
-        <a href="index.html">
+        <a href="index">
             <img src="İmages/favicon.png" alt="logo">
           King Charlotte</a>
       </div>
@@ -103,4 +103,5 @@
 
   </body>
 </html>
+
 
