--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h2>Hi, I'm KingCharlotte
             <i class="fa-solid fa-web-awesome"></i>
           </h2>
-          <p>I’m a computer science student that’s working to become a software engineer, but when the night comes im just a person that likes to write stories and build my own worlds and because i love video games as they shape my life I'm inspired to share my stories via the games i make with fun to play gameplays and good storys, but a story’s greatness change through readers perspective so i hope atleast you like the gameplay of my games!
+          <p>I’m a computer science student that’s working to become a software engineer, but when the night comes im just a person that likes to write stories and build my own worlds and because i love video games as they shape my life I'm inspired to share my stories via the games i make with fun to play gameplays and good stories, but a story’s greatness change through readers perspective so i hope atleast you like the gameplay of my games!
           </p>
 
          <br>
@@ -197,6 +197,7 @@
 
   </body>
 </html>
+
 
 
 
