--- a/Projects.html
+++ b/Projects.html
@@ -103,19 +103,22 @@
         <div class="Başlık">
           <h1>Games</h1>
         </div>
-        <div  class="içerik">
+       <div  class="içerik">
 <div class="text">
   <h3>Learning-Curve Games</h3>
-  <p>There are some games i make with free assets via unity while trying to learn fundementals, this games are not provide any vision of mine but i will put theme here anyway to show the understandment of my unity level</p>
+  <p>This section is for some games I make with free assets via unity with courses while trying to learn fundamentals. These games do not provide any vision of mine but I will put them here anyway to show the understatement of my unity level and systems per game.</p>
   <br>
   <p>
-    <u>Warning!:</u> Be awere i make this games just to learn unity so much of them are unpolished as i dont need to polish them much. 
+    <u>Note:</u> Be aware I make these games just to learn unity so many of these games are unpolished or do not have a proper ending as i make them to learn unity.
+ I don't plan to polish them much or release them for the future, they are just here to show my learning level of unity so please be aware of it before judging.
   </p>
 </div>
 
 <div class="Learning-curve-games">
-    <div class="Hücre">
+  <div class="Oyun-başlık">
       <h3>DriverProject</h3>
+      </div>
+    <div class="Hücre">
       <img src="/İmages/DriverProject.jpeg" alt="image">
       <p>
         DriverProject is the first and most fundemental game i make i learn the most starting level knowledge from it, objective is collecting ice creams and giving them to customers it has no end but there is total 16 customer you can count yourself and win if you help all of them.
@@ -123,7 +126,11 @@
       <br>      
       <a href="https://mega.nz/file/xRdDVaTK#N1cc4fi8LYzno1jAIT59odbf17a4kPiB_-K5M9fEzRc">Download link</a>
     </div>
-    <div class="Hücre"> <h3>SnowBoardProject</h3>
+    
+     <div class="Oyun-başlık">
+      <h3>SnowBoardProject</h3>
+      </div>
+    <div class="Hücre"> 
       <img src="İmages/SnowBoardProject.jpeg"
       alt="image">
       <p>SnowBoardProject is a project i have most fun making it and where i learn most codding fundementals, it has a end if you win or crash main objective is fliping and collectin much point as you can do! </p>
@@ -203,5 +210,6 @@ document.querySelector(".popup span").onclick = () => {
   </body>
 
 </html>
+
 
 
