--- a/Projects.html
+++ b/Projects.html
@@ -99,11 +99,12 @@
       <div class="Tables">
 
       <!-- Games -->
-      <section class="Games">
+      
+<section class="Games">
         <div class="Başlık">
           <h1>Games</h1>
         </div>
-       <div  class="içerik">
+        <div  class="içerik">
 <div class="text">
   <h3>Learning-Curve Games</h3>
   <p>This section is for some games I make with free assets via unity with courses while trying to learn fundamentals. These games do not provide any vision of mine but I will put them here anyway to show the understatement of my unity level and systems per game.</p>
@@ -116,32 +117,51 @@
 
 <div class="Learning-curve-games">
   <div class="Oyun-başlık">
-      <h3>DriverProject</h3>
+      <h3>
+        <div>
+          DriverProject
+          </div>
+        </h3>
       </div>
     <div class="Hücre">
       <img src="/İmages/DriverProject.jpeg" alt="image">
       <p>
-        DriverProject is the first and most fundemental game i make i learn the most starting level knowledge from it, objective is collecting ice creams and giving them to customers it has no end but there is total 16 customer you can count yourself and win if you help all of them.
+        DriverProject is the first and most fundamental game I make. I learn the most starting level knowledge from it, the objective is collecting ice creams and giving them to customers. It has no end but there are a total 16 customers you can count yourself and win if you help all of them.
       </p>
-      <br>      
-      <a href="https://mega.nz/file/xRdDVaTK#N1cc4fi8LYzno1jAIT59odbf17a4kPiB_-K5M9fEzRc">Download link</a>
+      <br>
+      <div class="download-links">
+        <span>Download:</span>      
+      <a href="https://mega.nz/file/xRdDVaTK#N1cc4fi8LYzno1jAIT59odbf17a4kPiB_-K5M9fEzRc">
+        <img src="/İmages/mega.png" alt="Mega logo">
+        <span>Mega</span>
+      </a>
+      </div>
     </div>
     
      <div class="Oyun-başlık">
-      <h3>SnowBoardProject</h3>
+      <h3>
+        <div>
+          SnowBoardProject
+        </div>
+        </h3>
       </div>
     <div class="Hücre"> 
       <img src="İmages/SnowBoardProject.jpeg"
       alt="image">
-      <p>SnowBoardProject is a project i have most fun making it and where i learn most codding fundementals, it has a end if you win or crash main objective is fliping and collectin much point as you can do! </p>
+      <p>SnowBoardProject is a project I have the most fun making and where I learn most coding fundamentals. It has an end if you win or crash. The main objective is flipping and collecting as many points as you can do! </p>
       <br>
-      <a href="https://mega.nz/file/McEUmS4B#L1p4O20H_3KhLUinHN0BI-Gt4ul6PFGZlqYKPF8Fgeg">Download link</a>
+      <div class="download-links">
+        <span>Download:</span>      
+      <a href="https://mega.nz/file/McEUmS4B#L1p4O20H_3KhLUinHN0BI-Gt4ul6PFGZlqYKPF8Fgeg">
+        <img src="/İmages/mega.png" alt="Mega logo">
+        <span>Mega</span>
+      </a>
+      </div>
     </div>
     <div class="Hücre"></div>
 </div>
         </div>
       </section>
-
       <!-- Arts -->
       <section id="Arts" class="Arts">
         <div class="Başlık">
@@ -210,6 +230,7 @@ document.querySelector(".popup span").onclick = () => {
   </body>
 
 </html>
+
 
 
 
