--- a/Projects.html
+++ b/Projects.html
@@ -124,7 +124,7 @@
         </h3>
       </div>
     <div class="Hücre">
-      <img src="/İmages/DriverProject.jpeg" alt="image">
+      <img src="İmages/DriverProject.jpeg" alt="image">
       <p>
         DriverProject is the first and most fundamental game I make. I learn the most starting level knowledge from it, the objective is collecting ice creams and giving them to customers. It has no end but there are a total 16 customers you can count yourself and win if you help all of them.
       </p>
@@ -132,7 +132,7 @@
       <div class="download-links">
         <span>Download:</span>      
       <a href="https://mega.nz/file/xRdDVaTK#N1cc4fi8LYzno1jAIT59odbf17a4kPiB_-K5M9fEzRc">
-        <img src="/İmages/mega.png" alt="Mega logo">
+        <img src="İmages/mega.png" alt="Mega logo">
         <span>Mega</span>
       </a>
       </div>
@@ -153,7 +153,7 @@
       <div class="download-links">
         <span>Download:</span>      
       <a href="https://mega.nz/file/McEUmS4B#L1p4O20H_3KhLUinHN0BI-Gt4ul6PFGZlqYKPF8Fgeg">
-        <img src="/İmages/mega.png" alt="Mega logo">
+        <img src="İmages/mega.png" alt="Mega logo">
         <span>Mega</span>
       </a>
       </div>
@@ -230,6 +230,7 @@ document.querySelector(".popup span").onclick = () => {
   </body>
 
 </html>
+
 
 
 
