--- a/index.html
+++ b/index.html
@@ -93,12 +93,12 @@
             </a>
             </div>
 
-            <div class="link-hücresi">
+            <!-- <div class="link-hücresi">
              <a href="#Sekmeler">
              <i class="fa-solid fa-bars"></i>
               <span>Menu</span>
             </a>
-            </div>
+            </div> -->
 
             <div class="link-hücresi">
              <a href="Projects">
@@ -197,6 +197,7 @@
 
   </body>
 </html>
+
 
 
 
